--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,2 +1,11 @@
-h1 {
-  color: red; }
+.card-courses-item {
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 10px; }
+
+.user-avatar {
+  height: 28px;
+  width: 28px; }
+
+.navbar-header {
+  background-color: #343a40 !important; }
