--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,5 +1,16 @@
 @import 'variables';
 
-.h1{
-    color: $red-color;
+.card-courses-item{
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 10px;
 }
+
+.user-avatar{
+    height: 28px;
+    width: 28px;
+}
+.navbar-header{
+    background-color: #343a40!important;
+}
+
