--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,11 +1,15 @@
 <div class="mt-4">
-    <div class="row">
+    <div class="row card-group">
         {{#each courses}}
-         <div class="col-sm-6 col-lg-4 col-xl-3">
-             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="{{this.image}}" alt="Card image cap">
+         <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+             <div class="card card-courses-item" >
+                <a href="/courses/{{this.slug}}">
+                    <img class="card-img-top" src="{{this.image}}" alt="Card image cap">
+                </a>
                 <div class="card-body">
-                    <h5 class="card-title">{{this.name}}</h5>
+                    <a href="/courses/{{this.slug}}">
+                        <h5 class="card-title">{{this.name}}</h5>
+                    </a>
                     <p class="card-text">{{this.description}}</p>
                     <a href="#" class="btn btn-primary">Mua Ngay</a>
                 </div>
